# dsp-lib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
include/dsp/: average.hpp  moving_average.hpp  root_mean_square.hpp
src/: average.cpp  moving_average.cpp  root_mean_square.cpp
tests/: CMakeLists.txt  test_average.cpp  test_moving_average.cpp  test_root_mean_square.cpp
